k8s/db-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - name: db-service
          image: ronit1209/url-shortener-db-service:latest
          ports:
            - containerPort: 8000
