k8s/db-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: url-shortener
spec:
  selector:
    app: db-service
  ports:
    - port: 8000
      targetPort: 8000
