k8s/go-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: url-shortener
spec:
  selector:
    app: go-service
  ports:
    - port: 8080
      targetPort: 8080
