k8s/go-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-service-ingress
  namespace: url-shortener
spec:
  rules:
    - host: shortener.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 8080
